[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/components/background/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://how_to_play/how_to_play.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/FredokaOne/FredokaOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/JetBrainsMono/JetBrainsMonoNerdFontCompleteM-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/components/theme_button_icon/theme_button_icon.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=16]
size = 86
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.741176, 0.741176, 0.741176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="GDScript" id=22]
script/source = "#tool
#class_name Name #, res://class_name_icon.svg
extends Button


#  [DOCSTRING]


#  [SIGNALS]


#  [ENUMS]
enum ColorOptions {PRIMARY, SECUNDARY}


#  [CONSTANTS]


#  [EXPORTED_VARIABLES]
export(ColorOptions) var selected_color: int = ColorOptions.PRIMARY


#  [PUBLIC_VARIABLES]


#  [PRIVATE_VARIABLES]


#  [ONREADY_VARIABLES]


#  [OPTIONAL_BUILT-IN_VIRTUAL_METHOD]
#func _init() -> void:
#	pass


#  [BUILT-IN_VURTUAL_METHOD]
func _ready() -> void:
	match(selected_color):
		ColorOptions.PRIMARY:
			set_primary_color()
		ColorOptions.SECUNDARY:
			set_secondary_color()
		_:
			set_primary_color()
	


#  [REMAINIG_BUILT-IN_VIRTUAL_METHODS]
#func _process(_delta: float) -> void:
#	pass


#  [PUBLIC_METHODS]
func set_primary_color() -> void:
	self.set(\"custom_colors/font_color\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_hover\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_pressed\", API.theme.get_color(API.theme.PB))
	
	var state_hover: StyleBoxFlat = self.get(\"custom_styles/hover\")
	state_hover.set(\"bg_color\", API.theme.get_color(API.theme.PL1))
	state_hover.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_pressed: StyleBoxFlat = self.get(\"custom_styles/pressed\")
	state_pressed.set(\"bg_color\", API.theme.get_color(API.theme.WHITE))
	state_pressed.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_focus: StyleBoxFlat = self.get(\"custom_styles/focus\")
	state_focus.set(\"bg_color\", API.theme.get_color(API.theme.PL1))
	state_focus.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_disabled: StyleBoxFlat = self.get(\"custom_styles/disabled\")
	state_disabled.set(\"bg_color\", API.theme.get_color(API.theme.PB))
	state_disabled.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_normal: StyleBoxFlat = self.get(\"custom_styles/normal\")
	state_normal.set(\"bg_color\", API.theme.get_color(API.theme.PB))
	state_normal.set(\"border_color\", API.theme.get_color(API.theme.PD2))


func set_secondary_color() -> void:
	self.set(\"custom_colors/font_color\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_hover\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_pressed\", API.theme.get_color(API.theme.SB))
	
	var state_hover: StyleBoxFlat = self.get(\"custom_styles/hover\")
	state_hover.set(\"bg_color\", API.theme.get_color(API.theme.SL1))
	state_hover.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_pressed: StyleBoxFlat = self.get(\"custom_styles/pressed\")
	state_pressed.set(\"bg_color\", API.theme.get_color(API.theme.WHITE))
	state_pressed.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_focus: StyleBoxFlat = self.get(\"custom_styles/focus\")
	state_focus.set(\"bg_color\", API.theme.get_color(API.theme.SL1))
	state_focus.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_disabled: StyleBoxFlat = self.get(\"custom_styles/disabled\")
	state_disabled.set(\"bg_color\", API.theme.get_color(API.theme.SB))
	state_disabled.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_normal: StyleBoxFlat = self.get(\"custom_styles/normal\")
	state_normal.set(\"bg_color\", API.theme.get_color(API.theme.SB))
	state_normal.set(\"border_color\", API.theme.get_color(API.theme.SD2))


#  [PRIVATE_METHODS]
 

#  [SIGNAL_METHODS]
"

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=10]
size = 40
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 30.0
expand_margin_right = 30.0
expand_margin_top = 11.0
expand_margin_bottom = 12.0

[sub_resource type="DynamicFont" id=24]
size = 80
outline_size = 3
use_filter = true
extra_spacing_top = -40
extra_spacing_bottom = -40
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.741176, 0.741176, 0.741176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="GDScript" id=30]
script/source = "#tool
#class_name Name #, res://class_name_icon.svg
extends Button


#  [DOCSTRING]


#  [SIGNALS]


#  [ENUMS]
enum ColorOptions {PRIMARY, SECUNDARY}


#  [CONSTANTS]


#  [EXPORTED_VARIABLES]
export(ColorOptions) var selected_color: int = ColorOptions.PRIMARY


#  [PUBLIC_VARIABLES]


#  [PRIVATE_VARIABLES]


#  [ONREADY_VARIABLES]


#  [OPTIONAL_BUILT-IN_VIRTUAL_METHOD]
#func _init() -> void:
#	pass


#  [BUILT-IN_VURTUAL_METHOD]
func _ready() -> void:
	match(selected_color):
		ColorOptions.PRIMARY:
			set_primary_color()
		ColorOptions.SECUNDARY:
			set_secondary_color()
		_:
			set_primary_color()
	


#  [REMAINIG_BUILT-IN_VIRTUAL_METHODS]
#func _process(_delta: float) -> void:
#	pass


#  [PUBLIC_METHODS]
func set_primary_color() -> void:
	self.set(\"custom_colors/font_color\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_hover\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_pressed\", API.theme.get_color(API.theme.PB))
	
	var state_hover: StyleBoxFlat = self.get(\"custom_styles/hover\")
	state_hover.set(\"bg_color\", API.theme.get_color(API.theme.PL1))
	state_hover.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_pressed: StyleBoxFlat = self.get(\"custom_styles/pressed\")
	state_pressed.set(\"bg_color\", API.theme.get_color(API.theme.WHITE))
	state_pressed.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_focus: StyleBoxFlat = self.get(\"custom_styles/focus\")
	state_focus.set(\"bg_color\", API.theme.get_color(API.theme.PL1))
	state_focus.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_disabled: StyleBoxFlat = self.get(\"custom_styles/disabled\")
	state_disabled.set(\"bg_color\", API.theme.get_color(API.theme.PB))
	state_disabled.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_normal: StyleBoxFlat = self.get(\"custom_styles/normal\")
	state_normal.set(\"bg_color\", API.theme.get_color(API.theme.PB))
	state_normal.set(\"border_color\", API.theme.get_color(API.theme.PD2))


func set_secondary_color() -> void:
	self.set(\"custom_colors/font_color\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_hover\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_pressed\", API.theme.get_color(API.theme.SB))
	
	var state_hover: StyleBoxFlat = self.get(\"custom_styles/hover\")
	state_hover.set(\"bg_color\", API.theme.get_color(API.theme.SL1))
	state_hover.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_pressed: StyleBoxFlat = self.get(\"custom_styles/pressed\")
	state_pressed.set(\"bg_color\", API.theme.get_color(API.theme.WHITE))
	state_pressed.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_focus: StyleBoxFlat = self.get(\"custom_styles/focus\")
	state_focus.set(\"bg_color\", API.theme.get_color(API.theme.SL1))
	state_focus.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_disabled: StyleBoxFlat = self.get(\"custom_styles/disabled\")
	state_disabled.set(\"bg_color\", API.theme.get_color(API.theme.SB))
	state_disabled.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_normal: StyleBoxFlat = self.get(\"custom_styles/normal\")
	state_normal.set(\"bg_color\", API.theme.get_color(API.theme.SB))
	state_normal.set(\"border_color\", API.theme.get_color(API.theme.SD2))


#  [PRIVATE_METHODS]
 

#  [SIGNAL_METHODS]
"

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=31]
size = 80
outline_size = 3
use_filter = true
extra_spacing_top = -40
extra_spacing_bottom = -40
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.741176, 0.741176, 0.741176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="GDScript" id=37]
script/source = "#tool
#class_name Name #, res://class_name_icon.svg
extends Button


#  [DOCSTRING]


#  [SIGNALS]


#  [ENUMS]
enum ColorOptions {PRIMARY, SECUNDARY}


#  [CONSTANTS]


#  [EXPORTED_VARIABLES]
export(ColorOptions) var selected_color: int = ColorOptions.PRIMARY


#  [PUBLIC_VARIABLES]


#  [PRIVATE_VARIABLES]


#  [ONREADY_VARIABLES]


#  [OPTIONAL_BUILT-IN_VIRTUAL_METHOD]
#func _init() -> void:
#	pass


#  [BUILT-IN_VURTUAL_METHOD]
func _ready() -> void:
	match(selected_color):
		ColorOptions.PRIMARY:
			set_primary_color()
		ColorOptions.SECUNDARY:
			set_secondary_color()
		_:
			set_primary_color()
	


#  [REMAINIG_BUILT-IN_VIRTUAL_METHODS]
#func _process(_delta: float) -> void:
#	pass


#  [PUBLIC_METHODS]
func set_primary_color() -> void:
	self.set(\"custom_colors/font_color\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_hover\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_pressed\", API.theme.get_color(API.theme.PB))
	
	var state_hover: StyleBoxFlat = self.get(\"custom_styles/hover\")
	state_hover.set(\"bg_color\", API.theme.get_color(API.theme.PL1))
	state_hover.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_pressed: StyleBoxFlat = self.get(\"custom_styles/pressed\")
	state_pressed.set(\"bg_color\", API.theme.get_color(API.theme.WHITE))
	state_pressed.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_focus: StyleBoxFlat = self.get(\"custom_styles/focus\")
	state_focus.set(\"bg_color\", API.theme.get_color(API.theme.PL1))
	state_focus.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_disabled: StyleBoxFlat = self.get(\"custom_styles/disabled\")
	state_disabled.set(\"bg_color\", API.theme.get_color(API.theme.PB))
	state_disabled.set(\"border_color\", API.theme.get_color(API.theme.PD2))
	
	var state_normal: StyleBoxFlat = self.get(\"custom_styles/normal\")
	state_normal.set(\"bg_color\", API.theme.get_color(API.theme.PB))
	state_normal.set(\"border_color\", API.theme.get_color(API.theme.PD2))


func set_secondary_color() -> void:
	self.set(\"custom_colors/font_color\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_hover\", API.theme.get_color(API.theme.WHITE))
	self.set(\"custom_colors/font_color_pressed\", API.theme.get_color(API.theme.SB))
	
	var state_hover: StyleBoxFlat = self.get(\"custom_styles/hover\")
	state_hover.set(\"bg_color\", API.theme.get_color(API.theme.SL1))
	state_hover.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_pressed: StyleBoxFlat = self.get(\"custom_styles/pressed\")
	state_pressed.set(\"bg_color\", API.theme.get_color(API.theme.WHITE))
	state_pressed.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_focus: StyleBoxFlat = self.get(\"custom_styles/focus\")
	state_focus.set(\"bg_color\", API.theme.get_color(API.theme.SL1))
	state_focus.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_disabled: StyleBoxFlat = self.get(\"custom_styles/disabled\")
	state_disabled.set(\"bg_color\", API.theme.get_color(API.theme.SB))
	state_disabled.set(\"border_color\", API.theme.get_color(API.theme.SD2))
	
	var state_normal: StyleBoxFlat = self.get(\"custom_styles/normal\")
	state_normal.set(\"bg_color\", API.theme.get_color(API.theme.SB))
	state_normal.set(\"border_color\", API.theme.get_color(API.theme.SD2))


#  [PRIVATE_METHODS]
 

#  [SIGNAL_METHODS]
"

[node name="HowToPlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
custom_constants/margin_right = 229
custom_constants/margin_top = 25
custom_constants/margin_left = 229
custom_constants/margin_bottom = 50
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 229.0
margin_top = 25.0
margin_right = 1691.0
margin_bottom = 1030.0
custom_constants/separation = 30

[node name="Button" parent="MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_left = 1342.0
margin_right = 1462.0
hint_tooltip = "Fechar"
size_flags_horizontal = 10
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "x"
script = SubResource( 22 )
selected_color = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 1462.0
margin_bottom = 1005.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PageTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
margin_right = 1462.0
margin_bottom = 855.0
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -117.0
margin_top = -32.0
margin_right = 117.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 180, 60 )
size_flags_horizontal = 6
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Como Jogar"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer2"]
margin_left = 40.0
margin_right = 1422.0
margin_bottom = 80.0
alignment = 2

[node name="Previous" parent="MarginContainer/VBoxContainer/Panel/MarginContainer2/HBoxContainer" instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
hint_tooltip = "Anterior"
size_flags_horizontal = 2
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/focus = SubResource( 27 )
custom_styles/disabled = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
disabled = true
text = ""
script = SubResource( 30 )

[node name="Indicators" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer2/HBoxContainer"]
margin_left = 681.0
margin_top = 30.0
margin_right = 701.0
margin_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 10
alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer2/HBoxContainer/Indicators"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 38 )

[node name="Next" parent="MarginContainer/VBoxContainer/Panel/MarginContainer2/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 1302.0
margin_right = 1382.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
hint_tooltip = "Próximo"
size_flags_horizontal = 10
custom_fonts/font = SubResource( 31 )
custom_styles/hover = SubResource( 32 )
custom_styles/pressed = SubResource( 33 )
custom_styles/focus = SubResource( 34 )
custom_styles/disabled = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
text = ""
script = SubResource( 37 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel/MarginContainer2/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Panel/MarginContainer2/HBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
